# pcl_object_detection

./: CHANGELOG.rst  CMakeLists.txt  README.en.md  README.md  README_en.md  install.sh  nodelet_description.xml  package.xml  template_readme.md  template_readme_en.md
config/dynamic_reconfigure/: LineDetectionParameter.cfg  ObjectDetectionParameter.cfg  PCLParameter.cfg
config/rviz/: demo.rviz  line_detection.rviz  pcl_object_detection.rviz
doc/md/: line_detection.md  point_cloud_object_detection.md
include/pcl_object_detection/: point_cloud_processor copy.hpp  point_cloud_processor.hpp
launch/: line_detection.launch  pcl_object_detection.launch
launch/demo/: demo.launch  demo_line.launch  pointcloud_publisher.launch  save_pcd.launch  scan_publisher.launch
msg/: LineInfo.msg  ObjectPose.msg  ObjectPoseArray.msg
param/: line_detection_param.yaml  object_detection_floor_param.yaml  object_detection_shelf_param.yaml  object_detection_table_param.yaml  placeable_postion_detection_param.yaml
param/demo/: floor_demo_param.yaml
src/: detection_manager_nodelet.cpp  line_detection_nodelet.cpp  object_detection_floor_nodelet.cpp  object_detection_shelf_nodelet.cpp  object_detection_table_nodelet.cpp  placeable_detection_nodelet.cpp  point_cloud_processor.cpp
src/sub/: pointcloud_publisher.cpp  save_pcd.cpp  scan_publisher.cpp
srv/: DetectionModeCtr.srv  LineDetectionService.srv
