<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_object_detection</name>
  <version>0.0.0</version>
  <description>
    The pcl_object_detection package provides a nodelet for detecting objects in point clouds.
  </description>
  <maintainer email="kvalentincardenas@gmail.com">Keith Valentin</maintainer>

  <license>BSD</license>

  <url type="website">https://home.soka.ac.jp/~choi/index.html</url>
  <url type="repository">https://github.com/TeamSOBITS/pcl_object_detection</url>
  <url type="bugtracker">https://github.com/TeamSOBITS/pcl_object_detection/issues</url>
  <author email="choi.7f@gmail.com">Team SOBITS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>
</package>
